feat: add my cv informations

--- a/index.html
+++ b/index.html
@@ -5,10 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My CV</title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/minireset.css/0.0.2/minireset.min.css"> -->
     <link rel="stylesheet" href="assets/css/style.css">    
 </head>
 <body>
-    
+    <section>
+        <h1>Nikita Kolenko</h1>
+        <img class="main-photo" src="assets/img/myPhoto.jpg" alt="My Photo">
+        <hr>
+    </section>
+    <section>
+        <h2>Contact Info:</h2>
+        <ul>
+            <li>Phon number: <a href="tel:+375292983486">+375(29)2983486</a></li>
+            <li>Email: <a href="mailto:nikitakolenko@yandex.ru">nikitakolenko@yandex.ru</a></li>
+            <li>Telegram: <a href="https://t.me/immersed">@immersed</a></li>
+            <li>Instagram: <a href="https://www.instagram.com/mr.immersed/">@mr.immersed</a></li>
+        </ul>
+        <hr>
+    </section>
+    <section>
+        <h2>Summary</h2>
+        <p>It is very important for me to become a developer. I really like to learn new technologies and use them. I want to use my knowledge to help people solve their pain and make this world more beautiful.</p>
+        <hr>
+    </section>
+    <section>
+        <h2>Skills:</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>GIT</li>
+            <li>Bootstrap</li>
+            <li>IDE
+              <ul>
+                <li>Sublime Text</li>
+                <li>VS Code</li>
+                <li>Atom</li>
+                <li>Brackets</li>
+                <li>Webstorm</li>
+              </ul>
+            </li>
+            <li>PHP</li>
+            <li>mySQL</li>
+            <li>CMS
+              <ul>
+                <li>WordPress</li>
+                <li>Open Card</li>
+              </ul>
+            </li>
+            <li>Adobe Photoshop</li>
+            <li>Adobe Illustrator</li>
+            <li>Cinema 4d</li>
+          </ul>
+          <hr>
+    </section>
+    <section>
+        <h2>Code examples</h2>
+        <p>My Github account - <a href="https://github.com/immersed88">link</a></p>
+        <hr>
+    </section>
+    <section>
+        <h2>Experience</h2>
+        <p>For the graduation project, I made a website on WordPress, a topic was drawn for it in Adobe Photoshop which I subsequently made up and put on WordPress, also for this project a form for recording clients and feedback on php was made, the form took several parameters and sent them to mail. Unfortunately, there is no way to show the source code, only screenshots remain.</p>
+        <hr>
+    </section>
+    <section>
+        <h2>Education</h2>
+        <p>Education form Full-time, Degree information Student (bachelor), 4 year, Graduation year 2017, Russian University of Cooperation. Mytishchi, Moscow Region. Information Systems and Technologies
+            <br><br>
+            Certificate “Light English” level A2
+            <br><br>
+            Visited repeatedly meetup “Epam miniq Vitebsk” and “Tech Meetup. Vitebsk”</p>
+            <hr>
+    </section>
+    <section>
+        <h2>English</h2>
+        <p>I graduated from English courses “Light English Vitebsk” and received a certificate level A2. Now I continue to improve knowledge on my own.</p>
+        <hr><br><br>
+    </section>
 </body>
 </html>
